--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
-  }
+  },
+  "i18n-ally.localesPaths": ["src/i18n", "src/messages"],
+  "i18n-ally.keystyle": "nested"
 }
