--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
