--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "yup": "^1.7.0"
   },
   "devDependencies": {
